hydra-node/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hydra-ui-test
  name: hydradx-node-testnet
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: wstgroup4
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=4000
    alb.ingress.kubernetes.io/auth-session-timeout: '86400'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":443}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:601305236792:certificate/7fa8ae14-a5ab-4a7c-bc2f-7d45e467dcfb
  labels:
    app: hydradx-node
spec:
  rules:
    - host: hydradx-testnet.hydration.cloud
      http:
        paths:
          - path: /hacknet/
            backend:
              serviceName: hacknet-svc
              servicePort: 80
          - path: /stakenet/
            backend:
              serviceName: stakenet-svc
              servicePort: 80
